Fixed icon alignment

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -629,8 +629,8 @@ img.half-size {
 }
 
 .sidebar-item img {
-  height: 1em;  /* 1em is equivalent to the font-size of the parent element, which in this case would be the text */
-  width: auto;  /* This ensures the aspect ratio of the icon is preserved */
+  height: 25px;  /* 1em is equivalent to the font-size of the parent element, which in this case would be the text */
+  width: 25px;  /* This ensures the aspect ratio of the icon is preserved */
   vertical-align: middle;
   filter: invert(1);  /* Inverts the colors. 1 means 100% inversion. */
   display: inline;
